# q2-rank-abundance

./: Makefile  README.md  pyproject.toml  setup.py
q2_rank_abundance/: _visualizer.py  plugin_setup.py
